--- a/menu/menu1.html
+++ b/menu/menu1.html
@@ -53,7 +53,7 @@
                     <h2><span class="soul">entr</span>ees</h2>
                 </div>
                 <div id="anim_entree" class="entree">
-                    <div id="b10" class="bouton_menu">
+                    <div class="bouton_menu">
                         <div class="detail">
                             <h3>Fricassée d'escargots</h3>
                             <p>Au piment d'Espelette</p>
