--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Omyfood</title>
 </head>
 
 <body>
-    <object data="accueil/accueil.html" width="100%" height="1000vh"></object>
+    <object data="accueil/accueil.html" width="100" height="1000"></object>
 
 </body>
 
