--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <object data="accueil/accueil.html" width="100" height="1000"></object>
+
     <title>Omyfood</title>
 </head>
 
 <body>
-    <object data="accueil/accueil.html" width="100" height="1000"></object>
 
 </body>
 
-</html> -->
+</html>
