--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     <title>acceuil </title>
-    <link rel="stylesheet" href="../accueil/sass/accueil.css">
+    <link rel="stylesheet" href="accueil/sass/accueil.css">
 </head>
 
 <body id="homepage">
@@ -98,9 +98,9 @@
             <h1 class="titre" id="ancre1">Restaurants</h1>
             <div class="restaurants">
                 <!-- CARTE1 -->
-                <a href="../menu/menu1.html" class="carte">
+                <a href="menu/menu1.html" class="carte">
                     <div class="photo">
-                        <img src="../restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût">
+                        <img src="restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût">
                         <p class="nouveau">Nouveau</p>
                     </div>
                     <div class="legende">
@@ -115,9 +115,9 @@
                     </div>
                 </a>
                 <!-- CARTE2 -->
-                <a href="../menu/menu2.html" class="carte">
+                <a href="menu/menu2.html" class="carte">
                     <div class="photo">
-                        <img src="../restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée">
+                        <img src="restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée">
                         <p class="nouveau">Nouveau</p>
                     </div>
                     <div class="legende">
@@ -133,9 +133,9 @@
                 </a>
                 <!-- CARTE3 -->
 
-                <a href="../menu/menu3.html" class="carte">
+                <a href="menu/menu3.html" class="carte">
                     <div class="photo">
-                        <img src="../restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                        <img src="restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                         <!-- <p class="nouveau">Nouveau</p> -->
                     </div>
                     <div class="legende">
@@ -151,9 +151,9 @@
                     </div>
                 </a>
                 <!-- CARTE4 -->
-                <a href="../menu/menu4.html" class="carte">
+                <a href="menu/menu4.html" class="carte">
                     <div class="photo">
-                        <img src="../restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                        <img src="restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                             alt="Le délice des sens">
                         <!-- <p class="nouveau">Nouveau</p> -->
                     </div>
