--- a/menu/menu2.html
+++ b/menu/menu2.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <header class="entete">
-        <a href="../accueil/accueil.html">
+        <a href="../index.html">
             <svg class="icone" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
                 fill="none">
                 <path
