--- a/menu/menu2.html
+++ b/menu/menu2.html
@@ -24,7 +24,7 @@
     </div>
     <header class="entete">
         <a href="../index.html">
-            <svg class="icone" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
+            <svg id="ancre2" class="icone" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
                 fill="none">
                 <path
                     d="M15.8856 21.9283L15.0335 22.7417C14.6727 23.0861 14.0892 23.0861 13.7323 22.7417L6.2706 15.6229C5.9098 15.2785 5.9098 14.7215 6.2706 14.3808L13.7323 7.2583C14.0931 6.9139 14.6765 6.9139 15.0335 7.2583L15.8856 8.07167C16.2502 8.41974 16.2425 8.98763 15.8702 9.32837L11.2451 13.5345H22.2764C22.7869 13.5345 23.1976 13.9265 23.1976 14.4138V15.5862C23.1976 16.0735 22.7869 16.4655 22.2764 16.4655H11.2451L15.8702 20.6716C16.2464 21.0124 16.254 21.5803 15.8856 21.9283Z"
@@ -133,7 +133,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="bouton_menu">
+                    <div id="b11" class="bouton_menu">
                         <div class="detail">
                             <h3>Langoustine poêlée</h3>
                             <p>Purée de patate douce</p>
@@ -216,7 +216,7 @@
                         </div>
                     </div>
                     <div class="commande">
-                        <a class="decouverte__bouton" href="#ancre1">Commander</a>
+                        <a class="decouverte__bouton" href="#ancre2">Commander</a>
                     </div>
                 </div>
             </div>
