2eme version livrable

--- a/menu/menu1.html
+++ b/menu/menu1.html
@@ -53,7 +53,7 @@
                     <h2><span class="soul">entr</span>ees</h2>
                 </div>
                 <div id="anim_entree" class="entree">
-                    <div id="b10" class="bouton_menu">
+                    <div id="b1" class="bouton_menu">
                         <div class="detail">
                             <h3>Fricassée d'escargots</h3>
                             <p>Au piment d'Espelette</p>
@@ -86,7 +86,7 @@
                     <div id="b3" class="bouton_menu">
                         <div class="detail">
                             <h3>Œuf au plat</h3>
-                            <p class="long1">Assaisonné à la truffe sur lit de caviar</p>
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
                         </div>
                         <div class="anim">
                             <div class="prix">
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="bouton_menu">
+                    <div id="b6" class="bouton_menu">
                         <div class="detail">
                             <h3>Filet de turbot</h3>
                             <p>Aux agrumes</p>
@@ -155,7 +155,7 @@
                     <h2><span class="soul">dess</span>erts</h2>
                 </div>
                 <div class="entree">
-                    <div class="bouton_menu">
+                    <div id="b7" class="bouton_menu">
                         <div class="detail">
                             <h3>Paris-Brest</h3>
                             <p>Revisité</p>
